order fix and dash overlap min-height set to 1150px

--- a/htdocs/website/cssjs/style.css
+++ b/htdocs/website/cssjs/style.css
@@ -56,7 +56,7 @@ body {
 }
 
 .dash {
-    min-width: 800px;
+    min-width: 1150px;
     width: 100%;
     position: fixed;
     top: 0px;
